Exemplo de commit

--- a/Index.html
+++ b/Index.html
@@ -1,41 +1,58 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
+		<meta charset="utf-8" />
 		<title>UNES-Página Principal</title>
 	</head>
-	<body background="Imagens/fundo.png" >
+	<body background="Imagens/fundo.png">
 		<table border="0" width="900" align="center">
 			<tr>
 				<td height="89">
-					<img src="Imagens/logo.png">
-				</td>	
-				<td align="right">	
-					<a href="">Home</a>/
-					<a href="Quem-somos.html">Quem somos</a>/
+					<img src="Imagens/logo.png" />
+				</td>
+				<td align="right">
+					<a href="">Home</a>/ <a href="Quem-somos.html">Quem somos</a>/
 					<a href="Contato.html">Contatos</a>
 				</td>
 			</tr>
 
 			<tr>
 				<td colspan="2">
-					<img src="Imagens/capa.png">
+					<img src="Imagens/capa.png" />
 				</td>
 			</tr>
 			<td colspan="2">
-				<h2>Sobre a Universidade</h2>
+				<h1>Saibe Mais Sobre a Universidade</h1>
 				<p>
-					Lorem Ipsum é simplesmente um <strong>texto fictício</strong> da indústria de <em>impressão e composição</em>. Lorem Ipsum tem sido o texto fictício padrão da indústria desde 1500, quando um impressor desconhecido pegou um modelo de impressão e embaralhou-o para fazer um livro de amostra de tipos. Ele sobreviveu não apenas cinco séculos, mas também ao salto para a composição eletrônica, permanecendo essencialmente inalterado. Foi popularizado na década de 1960 com o lançamento de folhas de Letraset contendo passagens de Lorem Ipsum e, mais recentemente, com software de editoração eletrônica como Aldus PageMaker incluindo versões de Lorem Ipsum.
-					<br>
-					<p>Lorem Ipsum é simplesmente um texto fictício da indústria de impressão e composição. Lorem Ipsum tem sido o texto fictício padrão da indústria desde 1500, quando um impressor desconhecido pegou um modelo de impressão e embaralhou-o para fazer um livro de amostra de tipos. Ele sobreviveu não apenas cinco séculos, mas também ao salto para a composição eletrônica, permanecendo essencialmente inalterado. Foi popularizado na década de 1960 com o lançamento de folhas de Letraset contendo passagens de Lorem Ipsum e, mais recentemente, com software de editoração eletrônica como Aldus PageMaker incluindo versões de Lorem Ipsum.</p>
+					Lorem Ipsum é simplesmente um <strong>texto fictício</strong> da
+					indústria de <em>impressão e composição</em>. Lorem Ipsum tem sido o
+					texto fictício padrão da indústria desde 1500, quando um impressor
+					desconhecido pegou um modelo de impressão e embaralhou-o para fazer um
+					livro de amostra de tipos. Ele sobreviveu não apenas cinco séculos,
+					mas também ao salto para a composição eletrônica, permanecendo
+					essencialmente inalterado. Foi popularizado na década de 1960 com o
+					lançamento de folhas de Letraset contendo passagens de Lorem Ipsum e,
+					mais recentemente, com software de editoração eletrônica como Aldus
+					PageMaker incluindo versões de Lorem Ipsum.
+				</p>
+				<p>
+					Lorem Ipsum é simplesmente um texto fictício da indústria de impressão
+					e composição. Lorem Ipsum tem sido o texto fictício padrão da
+					indústria desde 1500, quando um impressor desconhecido pegou um modelo
+					de impressão e embaralhou-o para fazer um livro de amostra de tipos.
+					Ele sobreviveu não apenas cinco séculos, mas também ao salto para a
+					composição eletrônica, permanecendo essencialmente inalterado. Foi
+					popularizado na década de 1960 com o lançamento de folhas de Letraset
+					contendo passagens de Lorem Ipsum e, mais recentemente, com software
+					de editoração eletrônica como Aldus PageMaker incluindo versões de
+					Lorem Ipsum.
 				</p>
 			</td>
 			<tr>
 				<td colspan="2" align="center">
-					<h4 >Todos Os Direitos Reservados</h4>
+					<h4>Todos Os Direitos Reservados</h4>
 				</td>
 			</tr>
 		</table>
-
 	</body>
 </html>
